2013-05-16 Chris Jackson  <chris.jackson@mrc-bsu.cam.ac.uk>

	* R/msm.R,R/hmm.R,src/lik.c: Allow matrix by patient to be
	supplied for the initial state occupancy probabilities.  

2013-05-15 Chris Jackson  <chris.jackson@mrc-bsu.cam.ac.uk>

	* R/msm.R: move gen.inits from msm.form.qmodel to main function.

2013-05-14 Chris Jackson  <chris.jackson@mrc-bsu.cam.ac.uk>

	* DESCRIPTION: Version 1.2 released

2013-05-08 Chris Jackson  <chris.jackson@mrc-bsu.cam.ac.uk>

	* R/msm.R,R/outputs.R: Misclassification models where some
	off-diagonal misclassification probabilities are 1 are now handled
	properly.  Thanks to Howard Thom for uncovering this.

2013-04-19 Chris Jackson  <chris.jackson@mrc-bsu.cam.ac.uk>

	* R/outputs.R: prevalence.msm can now produce expected values by
	integrating model predictions over the covariate histories
	observed in the data.

	* R/msm.R(msm.form.data): Drop subjects with only one observation
	remaining after dropping missing data (e.g. psor data).  This gives
	a more appropriate measure of the numbers at risk in prevalence.msm.

2013-04-18 Chris Jackson  <chris.jackson@mrc-bsu.cam.ac.uk>

	* R/outputs.R(summary.msm): Allow arguments to be passed through
	summary.msm to prevalence.msm.

	* R/outputs.R(pmatrix.piecewise.msm): Allow this to be used for
	time-homogeneous models with change point vector "times" of length
	0.

2013-04-15 Chris Jackson  <chris.jackson@mrc-bsu.cam.ac.uk>

	* R/outputs.R: New function efpt.msm for expected first passage
	times for time-homogeneous models.  Thanks to Howard Thom for the
	research.

	* R/outputs.R: totlos.msm now passes options to integrate() to
	bootstrapping functions.

2013-04-10 Chris Jackson  <chris.jackson@mrc-bsu.cam.ac.uk>

	* R/msm.form.data: firstobs was wrong with missing data.

2013-04-08 Chris Jackson  <chris.jackson@mrc-bsu.cam.ac.uk>

	* R/simul.R, R/pearson.R: Function boot.param.msm renamed to
	simfitted.msm and made user-accessible.
